# mastermind

./: .gitignore  CMakeLists.txt  MasterMindGame.c  MasterMindSolver.c  README.md  feedback.h  machineguess.c  mastermind.c  userguess.c  userguess.h
src/: CMakeLists.txt  feedback.c  machineguess.c  machineguess.h  mastermind.c  userguess.c
test/: CMakeLists.txt  testfeedback.cpp
